+v0.0.1.109 (13-01-2011)
- Initial support for retrieval of recordings on the ForTheRecord Argus server.
- Overview of recordings, grouped by Title
- Viewing of a selected recording via the ForTheRecord shares
- Credits: Red-F
v0.0.1.108 (08-01-2011)
- EPG data retrieval fixed for dates where month and day have less than 2 digits (credits: Red-F)
v0.0.1.107 (27-11-2010)
- First release of the ForTheRecord PVR client (Windows only, TSReader)
- Implemented: Channel retrieval, tuning of live TV and live radio (tsbuffer only, no rtsp), basic EPG
- Tested ForTheRecord Argus version: v1.5.0.3